--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         }
 
         async function run() {
-            await faceapi.loadModels('/models')
+            await faceapi.loadModels('models')
             modelLoaded = true
 
             const videoEl = $('#inputVideo').get(0)
