--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
           //  console.log(descriptorByClass)
 
-            const url = "http://face-recog-serv.herokuapp.com/api";
+            const url = "https://face-recog-serv.herokuapp.com/api";
 
             var dataArray;
             /*
